src/App.css
@import url('https://fonts.googleapis.com/css?family=DM+Sans');
* {
  box-sizing: border-box;
}

#root {
  position: relative;
}

.App {
  /* text-align: center; */
  /* height: 100vh; */
  /* overflow-y: auto; */
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.app-bg {
  background-size: cover;
  background-position: center;
  height: 100vh;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  font-size: calc(10px + 2vmin);
  color: white;
  z-index: -1;
}

.app-bg-overlay {
  width: 100%;
  min-height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-size: cover;
  background-position: center;
}

.app-main {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
  /* pointer-events: none; */
  background-size: cover;
  background-position: center;
}

.nft-level {
  background-color: #23262D;
  padding: 0px 100px;
  position: relative;
  display: flex;
  justify-content: space-between;
}

.nft-level-mirror {
  position: absolute;
  left: 50%;
  top: 0;
  transform: translate(-50%, -40%);
}

.branchild-nft {
  max-width: 100%;
}

.nft-experience {
  max-width: 100%;
}

.nft-level-message-bar {
  background-color: #65D6EE;
  color: #23262D;
  font-weight: 700;
  font-size: 20px;
  font-family: 'Cormorant Garamond';
  font-style: italic;
  padding: 10px;
  text-overflow: clip;
  white-space: nowrap;
  overflow: hidden;
}
.anim-spin {
  animation: App-logo-spin infinite 20s linear;
}

.App-link {
  color: #61dafb;
}

.radial-mask > .bg {
  transition: 0.5s;
  clip-path: circle(360px at center);
}

.radial-mask > .bg:hover {
  clip-path: circle(0px at center);
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
  -webkit-overflow-scrolling: touch;
}

.hero-desc {
  font-family: 'Cormorant Garamond';
  font-style: italic;
  font-weight: 700;
  background: linear-gradient(90.86deg, #FFC6CE 26.22%, #64D6EE 97.07%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.hero-title {
  font-family: Sora;
  font-style: normal;
  font-weight: 800;
  background: linear-gradient(90.86deg, #FFC6CE 26.22%, #64D6EE 97.07%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.concept-title {
  font-family: 'Cormorant Garamond';
  font-style: normal;
  font-weight: bolder;
  background: linear-gradient(90.86deg, #FFC6CE 26.22%, #64D6EE 97.07%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.overlay-title {
  font-family: Sora;
  font-style: normal;
  font-weight: 800;
  letter-spacing: 0em;
  text-align: left;
  color: #22262A;
}

.overlay-desc {
  font-family: 'Cormorant Garamond';
  font-style: italic;
  font-weight: 600;
  letter-spacing: 0em;
  color: #22262A;
}

/* Tooltip container */
.custom-tooltip {
  position: relative;
  display: inline-block;
}

/* Tooltip text */
.custom-tooltip .tooltiptext {
  visibility: hidden;
  width: 160px;
  background: linear-gradient(90.86deg, #FFC6CE 26.22%, #64D6EE 97.07%);
  color: #22262A;
  text-align: center;
  font-family: 'Sora';
  font-weight: bold;
  font-size: 15px;
  padding: 5px 10px;
  border-radius: 12px;
  /* Position the tooltip text */
  position: absolute;
  z-index: 1;
  bottom: 145%;
  left: 50%;
  margin-left: -80px;

  /* Fade in tooltip */
  opacity: 0;
  transition: opacity 0.3s;
}

/* Tooltip arrow */
.custom-tooltip .tooltiptext::after {
  content: "";
  /* position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent; */
}

/* Show the tooltip text when you mouse over the tooltip container */
.custom-tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

.collapse:not(.show) {
  display: none;
}

.collapsing {
  height: 0;
  overflow: hidden;
  transition: height .35s ease;
}

.disable-animation .collapsing {
  height: 0;
  overflow: hidden;
  transition: none;
}

@media only screen and (max-width: 1024px) {
  .nft-level {
    padding: 20px;
  }

  .nft-level-mirror {
    width: 40vw;
  }
}

@media only screen and (max-width: 768px) {
  .nft-level-mirror {
    width: 60vw;
    max-width: 50vh;
  }

  .nft-level {
    padding: 20px;
  }

  .nft-experience {
    padding-bottom: 0;
  }
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

